# fluka_simulations

./: .gitignore  README.md
activation_test/: 1_activation.inp  2activation.inp  activation.inp  activation_2.inp  flair-autosave.pickle
correct_layout/: Makefile  flair-autosave.pickle  layout.flair  layout.flair~  layout.inp  layout.inp~
layout_python/: .50brass1p25.inp.swp  .brass_full_1mm.inp.swp  20brass1p25.inp  20tungsten1p0.inp  20tungsten1p27.inp  20tungsten1p5.inp  50brass1p25.inp  Brass_inp_maker.py  Makefile  Treatment_simulation.py  Tungsten_inp_maker.py  brass_full_0p8mm.inp  brass_full_1mm.inp  inp_maker.py  treatment_grid_50brass1p25.inp  tungsten_full_1p27mm.inp  watertank.inp
plotdata_cross/: .w184_rn184_p_x.txt.swp  w184_rn184_p_x.txt  zn_64_co60_n_D_he3.txt
python_layout/: Makefile  inp_maker.py
python_notebook/: README.md  c:\data\pandas.txt  first test.ipynb  pyproject.toml
reliability/: flair-autosave.pickle  recreation.flair  recreation.flair~  recreation.inp  recreation.inp~  recreation_21_sum.lis  recreation_21_tab.lis  recreation_22_sum.lis  recreation_22_tab.lis  recreation_23_sum.lis  recreation_23_tab.lis  recreation_24_sum.lis  recreation_24_tab.lis  recreation_25_sum.lis  recreation_25_tab.lis  recreation_26_sum.lis  recreation_26_tab.lis  recreation_27_sum.lis  recreation_27_tab.lis  recreation_28_sum.lis  recreation_28_tab.lis  recreation_29_sum.lis  recreation_29_tab.lis  recreation_30_sum.lis  recreation_30_tab.lis  recreation_31_sum.lis  recreation_31_tab.lis  recreation_32_sum.lis  recreation_32_tab.lis  (+16 more)
(+1171 files in other folders)
