[tool.poetry]
name = "fluka_sim_python"
version = "0.1.0"
description = "Fluka simulation analysis"
authors = ["Mikkel Sewerin Daugaard - Tester WSL <tester@tester>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
pandas = "^1.5.3"
matplotlib = "^3.7.1"
numpy = "^1.24.2"
scipy = "^1.10.1"
radioactivedecay = "^0.4.17"
mendeleev = "^0.13.1"

[tool.poetry.group.dev.dependencies]
pandas = "^1.5.3"
numpy = "^1.24.2"
matplotlib = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
